@@ -20,7 +20,7 @@ name 'Class-Utils';
 perl_version 5.008;
 readme_from 'Utils.pm';
 recursive_author_tests('xt');
-requires 'Error::Pure' => 0.09,
+requires 'Error::Pure' => 0.27,
 requires 'Exporter' => 0;
 requires 'Readonly' => 0;
 resources 'bugtracker' => 'https://github.com/michal-josef-spacek/Class-Utils/issues';
