@@ -1,4 +1,5 @@
 0.12
+ - Fix default Error::Pure module via fix in Error::Pure.
 
 0.11 2022-02-07T22:25:26+01:00
  - Fix default Error::Pure module, which is used for error in tests.
